tests/paczka1/fuzzy1/13814310.err
Error in line 5: nT3dpOqu0s A388 24,6
Error in line 12: S527 A378 57,4
Error in line 24: nT3dpOqu0s A388 33,5
Error in line 23: S527 S527 23,9
Error in line 29: 9pnE A388 63,5
Error in line 27: XBG5XC A719 3,0
Error in line 35: XBG5XC S527 97,1
Error in line 40: XBG}XC A719 44,4
